--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,13 @@
          <a class="navbar-brand" href="#">Game Informer Scraper</a>
       </div>
       <div class="col-6">
-         <button class="btn btn-primary">Scrape Articles!</button>
-         <button class="btn btn-primary">Clear Articles!</button>
+         <button class="btn btn-primary" id="scrape-articles">Scrape Articles!</button>
+         <button class="btn btn-primary" id="clear-articles">Clear Articles!</button>
       </div>
    </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" id="articles">
    {{#each articles}}
    <div class="card p-5">
       <ul>
@@ -22,3 +22,17 @@
    </div>
    {{/each}}
 </div>
+
+<script>
+   $("#clear-articles").on("click", function() {
+      $.get("/deleteArticles").then(function(res) {
+        $("#articles").empty();
+      })
+   })
+
+   $("#scrape-articles").on("click", function() {
+      $.get("/scrape").then(function(res) {
+        location.reload();
+      })
+   })
+</script>
