--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,21 +14,22 @@
 
    {{!-- Client-Side CSS --}}
    <link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-
-<body>
-
-   {{{body}}}
 
    {{!-- jQuery --}}
    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
 
    {{!-- anime.js --}}
-   <script src="js/anime.min.js"></script>
+   {{!-- <script src="js/anime.min.js"></script> --}}
 
    {{!-- Client-Side Javascript --}}
    <script src="js/app.js"></script>
+   
+</head>
+
+<body>
+
+   {{{body}}}
 
 </body>
 
