Add view for viewing saved articles. Add buttons to naviagate between home page and saved articles page.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-light bg-light">
    <div class="row">
-      <div class="col-6">
-         <a class="navbar-brand" href="#">Game Informer Scraper</a>
-      </div>
-      <div class="col-6">
-         <button class="btn btn-primary" id="scrape-articles">Scrape Articles!</button>
-         <button class="btn btn-primary" id="clear-articles">Clear Articles!</button>
-      </div>
+      <a class="navbar-brand" href="#">Game Informer Scraper</a>
+      <a href="/savedArticles">
+         <button class="btn btn-primary" id="saved-articles">View Saved Articles</button>
+      </a>
+      <button class="btn btn-primary" id="scrape-articles">Scrape Articles</button>
+      <button class="btn btn-danger" id="clear-articles">Clear Articles</button>
    </div>
 </nav>
 
