Add PUT route for 'unsaving' articles.

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -24,5 +24,14 @@
 </div>
 
 <script>
+   $(".unsave-article").on("click", function() {
+      var id = $(this).attr("data-id");
 
+      $.ajax({
+         method: "PUT",
+         url: "/unsaveArticle/" + id
+      }).then(function(res) {
+         location.reload();
+      })
+   })
 </script>
