--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
    {{!-- Google Fonts --}}
+   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
    {{!-- Client-Side CSS --}}
    <link rel="stylesheet" href="css/style.css" type="text/css">
