--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ body {
    font-family: 'Open Sans', sans-serif;
 }
 
-/* Navbar styles */
+/* Navbar Styles */
 #navbar {
    height: 80px;
    background-color: white;
@@ -51,4 +51,47 @@ body {
 
 .spacer {
    margin: 0 10px;
+}
+
+/* Article Cards Styles */
+
+#articles-display {
+   height: 100vh;
+   background-color: rgb(245, 245, 245);
+   padding: 25px 50px;
+}
+
+.article-card {
+   padding: 25px;
+   margin: 25px 0;
+}
+
+.article-card h2 {
+   margin: 0 0 15px;
+}
+
+.article-card a {
+   color: rgb(37,104,222);
+}
+
+.article-card a:hover {
+   color: rgb(26, 70, 147);
+   text-decoration: none;
+}
+
+.article-card p {
+   margin: 0 0 15px 0;
+}
+
+.article-button {
+   background: none;
+   color: rgb(37,104,222);
+   padding: 5px 15px;
+   border: 2px solid rgb(37,104,222);
+   transition: all 200ms;
+}
+
+.article-button:hover {
+   color: white;
+   background-color: rgb(37,104,222);
 }
