--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,12 +1,18 @@
-<nav class="navbar navbar-light bg-light">
-   
-   <div class="row">
-      <a class="navbar-brand" href="#">Game Informer Scraper</a>
-      <a href="/">
-         <button class="btn btn-primary" id="home">Home</button>
-      </a>
+<div class="container-fluid">
+   <div class="row" id="navbar">
+      <div class="col-6">
+         <div id="logo-container">
+            <img src="images/gi-logo.svg" id="gi-logo" alt="gi-logo">
+            <div>Article Scraper</div>
+         </div>
+      </div>
+      <div class="col-6" id="nav-buttons">
+         <a href="/">
+            <div class="nav-button" id="home">Return Home</div>
+         </a>
+      </div>
    </div>
-</nav>
+</div>
 
 <div class="container-fluid" id="articles">
    {{#each articles}}
