--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ body {
 /* Article Cards Styles */
 
 #articles-display {
-   height: 100vh;
+   min-height: 100vh;
    background-color: rgb(245, 245, 245);
    padding: 25px 50px;
 }
