--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" id="navbar-container">
    <div class="row" id="navbar">
       <div class="col-6">
          <div id="logo-container">
